# ChangeLog for zram-init:

*zram-init-10.2:
	Martin Väth <martin at mvath.de>:
	- Yet another docu fix: update conf.d comments

*zram-init-10.1:
	Mattéo Rossillol‑‑Laruelle <beatussum at protonmail.com>:
	- Fixes in docu

	Martin Väth <martin at mvath.de>:
	- Fixes in docu
	- German manpage

*zram-init-10.0:
	Mattéo Rossillol‑‑Laruelle <beatussum at protonmail.com>:
	- XFS support
	- i18n support
	- French translation

	Martin Väth <martin at mvath.de>:
	- Fallback if gettext is not available
	- Makefile: Separate into make | make install, shebang conversion
	- Makefile: make most installs optional
	- German translation

*zram-init-9.1:
	xdch57:
	- manpage

*zram-init-9.0:
	Martin Väth <martin at mvath.de>:
	- Support writeback of incompressible/idle pages and writeback_limit
	- Finally suppress the annoying output of the logger path

*zram-init-8.2:
	Edlund Scott <at sredlund>:
	- Fix variable typos and shell style

	Martin Väth <martin at mvath.de>:
	- Add defaults where half of memory is used for zram, see
	  https://github.com/vaeth/zram-init/issues/16
	  Thanks to Scott Edlund for the suggestion and code snippets.
	- Log errors, see https://github.com/vaeth/zram-init/issues/14
	  Thanks to Scott Edlund for the suggestion.

*zram-init-8.1:
	Florian Gamböck <mail at floga.de>:
	- Correctly resolve args*

*zram-init-8.0:
	Martin Väth <martin at mvath.de>:
	- Support zstd (default, help text, zsh completion)

*zram-init-7.1:
	ko-zu:
	- Fix missing newline for backing_dev

	Martin Väth <martin at mvath.de>:
	- Unify output functions

*zram-init-7.0_p1:
	Pablo Cholaky <waltercool at slash.cl>:
	- Fix zram_var_tmp.service to be analogous to zram_tmp.service
	  due to conflicts with systemd-hostnamed PrivateTmp=yes, see
	  https://github.com/vaeth/zram-init/pull/11

*zram-init-7.0:
	Martin Väth <martin at mvath.de>:
	- Support discard also for swap
	- Support mem_limit
	- Support backup_dev

*zram-init-6.1.2:
	Martin Väth <martin at mvath.de>: