@@ -9,6 +9,7 @@ Florian Gamböck <mail at floga.de>:
 Karol Herbst <git at karolherbst.de>
 ko-zu
 Thomas Kear
+Jan Palus <atler at pid-linux.org> (avoid shell calculation)
 Mattéo Rossillol‑‑Laruelle <beatussum at protonmail.com> (https://github.com/beatussum) (XFS support, Makefile, i18n support, Makefile, French translation)
 Edlund Scott <at sredlund>
 Stuart <itoffshore at users.noreply.github.com>
